dom/indexedDB/AsyncConnectionHelper.h
@@ -87,6 +87,7 @@ public:
   }
 
   static IDBTransaction* GetCurrentTransaction();
+  static void SetCurrentTransaction(IDBTransaction* aTransaction);
 
   nsISupports* GetSource()
   {
