dom/indexedDB/IDBTransaction.h
@@ -45,6 +45,7 @@
 
 #include "nsIIDBTransaction.h"
 #include "nsIRunnable.h"
+#include "nsIThreadInternal.h"
 
 #include "nsDOMEventTargetHelper.h"
 #include "nsCycleCollectionParticipant.h"
@@ -69,6 +70,7 @@ class IDBTransaction : public nsDOMEventTargetHelper,
 {
   friend class AsyncConnectionHelper;
   friend class CommitHelper;
+  friend class ThreadObserver;
   friend class TransactionThreadPool;
 
 public:
@@ -82,7 +84,8 @@ public:
   Create(IDBDatabase* aDatabase,
          nsTArray<nsString>& aObjectStoreNames,
          PRUint16 aMode,
-         PRUint32 aTimeout);
+         PRUint32 aTimeout,
+         bool aDispatchDelayed = false);
 
   // nsPIDOMEventTarget
   virtual nsresult PreHandleEvent(nsEventChainPreVisitor& aVisitor);
@@ -133,16 +136,7 @@ public:
     return GetCachedStatement(query);
   }
 
-#ifdef DEBUG
   bool TransactionIsOpen() const;
-#else
-  bool TransactionIsOpen() const
-  {
-    return (mReadyState == nsIIDBTransaction::INITIAL ||
-            mReadyState == nsIIDBTransaction::LOADING) &&
-           !mClosed;
-  }
-#endif
 
   bool IsWriteAllowed() const
   {
@@ -164,6 +158,35 @@ public:
   already_AddRefed<IDBObjectStore>
   GetOrCreateObjectStore(const nsAString& aName,
                          ObjectStoreInfo* aObjectStoreInfo);
+
+  class ThreadObserver : public nsIThreadObserver
+  {
+  public:
+    NS_DECL_ISUPPORTS
+    NS_DECL_NSITHREADOBSERVER
+
+    static bool BeginObserving(IDBTransaction* aTransaction);
+
+  private:
+    ThreadObserver();
+    ~ThreadObserver();
+
+    void UpdateNewlyCreatedTransactions(PRUint32 aRecursionDepth);
+
+    struct TransactionInfo
+    {
+      PRUint32 recursionDepth;
+      nsTArray<nsRefPtr<IDBTransaction> > transactions;
+    };
+
+    nsAutoTArray<TransactionInfo, 1> mTransactions;
+
+    nsCOMPtr<nsIThreadObserver> mPreviousObserver;
+    nsRefPtr<ThreadObserver> mKungFuDeathGrip;
+
+    PRUint32 mBaseRecursionDepth;
+    bool mDone;
+  };
 
 private:
   IDBTransaction();
@@ -196,7 +219,7 @@ private:
   nsTArray<nsRefPtr<IDBObjectStore> > mCreatedObjectStores;
 
   bool mAborted;
-  bool mClosed;
+  bool mCreating;
 };
 
 class CommitHelper : public nsIRunnable
